<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ServicesListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryColor"
                    android:paddingVertical="@dimen/padding_small"
                    android:paddingLeft="@dimen/padding_medium"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    android:paddingStart="@dimen/padding_medium"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cat_learn"
                        android:textAppearance="@style/MediumText"
                        android:textColor="@color/whiteColor"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cat_decs_learn"
                        android:textColor="@color/whiteColor"
                        android:textAppearance="?attr/textAppearanceCaption"/>

                </LinearLayout>

                <com.duatson.studentapp.application.ExpandableHeightGridView
                    android:id="@+id/gvCatLearn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/grid_spacing"
                    android:columnWidth="60dp"
                    android:gravity="center"
                    android:horizontalSpacing="@dimen/grid_spacing"
                    android:numColumns="auto_fit"
                    android:verticalSpacing="@dimen/grid_spacing" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryColor"
                    android:paddingVertical="@dimen/padding_small"
                    android:paddingLeft="@dimen/padding_medium"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    android:paddingStart="@dimen/padding_medium"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cat_docs"
                        android:textAppearance="@style/MediumText"
                        android:textColor="@color/whiteColor"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cat_decs_docs"
                        android:textColor="@color/whiteColor"
                        android:textAppearance="?attr/textAppearanceCaption"/>

                </LinearLayout>

                <com.duatson.studentapp.application.ExpandableHeightGridView
                    android:id="@+id/gvCatDocs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:columnWidth="60dp"
                    android:gravity="center"
                    android:horizontalSpacing="@dimen/grid_spacing"
                    android:numColumns="auto_fit"
                    android:verticalSpacing="@dimen/grid_spacing" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryColor"
                    android:paddingVertical="@dimen/padding_small"
                    android:paddingLeft="@dimen/padding_medium"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    android:paddingStart="@dimen/padding_medium"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cat_allowance"
                        android:textAppearance="@style/MediumText"
                        android:textColor="@color/whiteColor"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cat_decs_allowance"
                        android:textColor="@color/whiteColor"
                        android:textAppearance="?attr/textAppearanceCaption"/>

                </LinearLayout>

                <com.duatson.studentapp.application.ExpandableHeightGridView
                    android:id="@+id/gvCatAllowance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/grid_spacing"
                    android:columnWidth="60dp"
                    android:gravity="center"
                    android:horizontalSpacing="@dimen/grid_spacing"
                    android:numColumns="auto_fit"
                    android:verticalSpacing="@dimen/grid_spacing" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryColor"
                    android:paddingVertical="@dimen/padding_small"
                    android:paddingLeft="@dimen/padding_medium"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    android:paddingStart="@dimen/padding_medium"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cat_others"
                        android:textAppearance="@style/MediumText"
                        android:textColor="@color/whiteColor"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cat_decs_others"
                        android:textColor="@color/whiteColor"
                        android:textAppearance="?attr/textAppearanceCaption"/>

                </LinearLayout>

                <com.duatson.studentapp.application.ExpandableHeightGridView
                    android:id="@+id/gvCatOthers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/grid_spacing"
                    android:columnWidth="60dp"
                    android:gravity="center"
                    android:horizontalSpacing="@dimen/grid_spacing"
                    android:numColumns="auto_fit"
                    android:verticalSpacing="@dimen/grid_spacing" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>