<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ServiceDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbrServiceDetail"
            style="@style/Widget.StudentApp.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/primaryDarkColor"
            android:elevation="8sp"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleTextColor="@color/whiteColor"
            tools:ignore="UnusedAttribute">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32sp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:gravity="center_vertical"
                android:text="@string/serviceDetail_title"
                android:textAppearance="@style/TitleText"
                android:textColor="@color/whiteColor" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/service_detail_cover_image_height">

                <ImageView
                    android:id="@+id/ivServiceThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_helper_service_detail"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_filter"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvServiceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingLeft="@dimen/grid_spacing"
                android:paddingTop="@dimen/grid_spacing"
                android:paddingRight="@dimen/grid_spacing"
                android:text="@string/welcome"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/grid_spacing"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Chi phí"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvServiceFee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="20,000"
                            android:textAppearance="?attr/textAppearanceHeadline5"
                            android:textColor="@color/primaryColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/service_currency"
                            android:textColor="@color/primaryColor" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/register"
                    app:icon="@drawable/ic_send"
                    app:iconGravity="end" />

            </LinearLayout>

            <View style="@style/Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/greyLight"
                android:paddingVertical="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_medium"
                android:text="@string/service_detail_description"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/tvServiceDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_spacing"
                android:text="@string/app_name"
                android:textAppearance="?attr/textAppearanceBody1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View style="@style/Divider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/greyLight"
                    android:paddingVertical="@dimen/padding_small"
                    android:paddingLeft="@dimen/padding_medium"
                    android:text="@string/service_contact_title"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

                <View style="@style/Divider" />

                <com.duatson.studentapp.application.ExpandableHeightListView
                    android:id="@+id/lvContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/whiteColor" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>